syntax = "proto3";

option csharp_namespace = "Identity.Server.Grpc.Protos";

service User{
	rpc GetBySession (GetBySessionRequest) returns (GetUserReply);
	rpc GetByUserName (GetByUserNameRequest) returns (GetUserReply);
	rpc GetById (GetByIdRequest) returns (GetUserReply);
	rpc GetUsers(stream GetByIdRequest) returns(stream UserModel);
}

message GetBySessionRequest{
	string session = 1;
}

message GetByUserNameRequest{
	string userName = 1;
}

message GetByIdRequest{
	string id = 1;
}

message GetUserReply{
	int32 code = 1;
	bool status = 2;
	string title = 3;
	string message = 4;
	UserModel result = 5;
}

message UserModel {
	string id = 1;
	string fullName = 2;
	string mobileNo = 3;
	string email = 4;
	string registerDate = 5;
	bool isActive = 6;
}
